bdr.BDR.scala.error
Compilation error:
BDR:2: error: not found: value char
  if (char getIndication()='R'){
      ^BDR:6: error: not found: value char
  if (char getIndication()=L){
      ^BDR:6: error: not found: value L
  if (char getIndication()=L){
                           ^BDR:10: error: not found: value char
  if (char getIndication()=I){
      ^BDR:10: error: not found: value I
  if (char getIndication()=I){
                           ^BDR:15: error: not found: value char
  if (char getIndication()=A){
      ^BDR:15: error: not found: value A
  if (char getIndication()=A){
                           ^BDR:18: error: not found: value char
  if (char getIndication()=B){
      ^BDR:18: error: not found: value B
  if (char getIndication()=B){
                           ^BDR:22: error: not found: value char
  if (char getIndication()=C){
      ^BDR:22: error: not found: value C
  if (char getIndication()=C){
                           ^BDR:27: error: not found: value char
  if (char getIndication()=Z){
      ^BDR:27: error: not found: value Z
  if (char getIndication()=Z){
                           ^BDR:30: error: not found: value char
  if (char getIndication()=Y){
      ^BDR:30: error: not found: value Y
  if (char getIndication()=Y){
                           ^BDR:34: error: not found: value char
  if (char getIndication()=X){
      ^BDR:34: error: not found: value X
  if (char getIndication()=X){
                           ^